Refactor docker container, devcontainer setup and enhance schema generation with environment variable support

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,18 @@
 {
 	"name": "devcontainer",
-	"dockerFile": "dev.Dockerfile",
+	"dockerFile": "../Dockerfile",
+	"build": {
+		"target": "base"
+	},
 	
 	"updateContentCommand": ".devcontainer/updateContentCommand.sh",
-	
+
+	"features": {
+		"ghcr.io/nils-geistmann/devcontainers-features/create-remote-user:0": {
+			"passwordLessSudo": true
+		}
+	},
+
 	"customizations": {
 		"vscode": {
 			"extensions": [
