1. Update JsonQuery to use the jq lib so we can have fully JQ compatible expressions, including recursion, replacements, etc. 2. Add GroupBy aggregation element that groups elements by a specified key (yields one element per key).

--- a/examples/pokemon_api.yaml
+++ b/examples/pokemon_api.yaml
@@ -25,7 +25,7 @@
       - id: conduit.RestApi
         response_format: "json"
       - id: conduit.JsonQuery
-        query: ".sprites.other.official-artwork.front_default"
+        query: '.sprites.other["official-artwork"].front_default'
     filename:  # Pokemon name with .png extension
       - id: conduit.JsonQuery
         query: ".name"
