feat: Add REST API server with comprehensive pipeline execution support
- Add FastAPI-based server with /run, /health, and /schema endpoints
- Implement streaming pipeline execution with result collection
- Add structured API responses with results, stdout, stderr, and stats
- Support JSON array, JSON object, and YAML string pipeline formats
- Add environment variable argument passing via API requests
- Restructure CLI to use subcommands (run, visualize, serve)
- Add server launch configuration for VS Code debugging
- Update README with modern structure focusing on quick start and API usage
- Add comprehensive documentation for all pipeline elements
- Create custom elements development guide with examples
- Add yq tool installation for better YAML/JSON conversion
- Update requirements with FastAPI and uvicorn dependencies
- Improve dev container setup with proper user configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,8 @@
 		}
 	},
 
+	"remoteUser": "vscode",
+
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -22,6 +24,7 @@
 				"augustocdias.tasks-shell-input"
 			],
 			"settings": {
+				"terminal.integrated.defaultProfile.linux": "bash"
 			}
 		}
 	}
