feat: Add CI and PR workflows for Docker image build and testing feat: Implement release workflow for Docker image with versioning and artifact generation feat: Enhance logging configuration with customizable format and output options fix: Update pipeline logging to provide summarized output for better readability with different log formats feat: Add hello world example pipeline for demonstration and basic checks

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,8 +32,7 @@
             "program": "${workspaceFolder}/conduit-cli",
             "cwd": "${workspaceFolder}",
             "args": [
-                "${input:workflowFile}",
-                "--visualize-only"
+                "visualize", "${input:workflowFile}"
             ],
             "console": "integratedTerminal"
         },
@@ -44,7 +43,7 @@
             "program": "${workspaceFolder}/conduit-cli",
             "cwd": "${workspaceFolder}",
             "args": [
-                "${input:workflowFile}",
+                "run", "${input:workflowFile}",
                 "--args", "${input:args}"
             ],
             "console": "integratedTerminal"
