--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -22,8 +22,8 @@ jobs:
       
     - name: Build Docker image
       run: |
-        docker buildx build --platform linux/amd64,linux/arm64 -t conduit:latest --load .
-        echo "✅ Docker multi-platform build completed successfully"
+        docker buildx build --platform linux/amd64 -t conduit:latest --load .
+        echo "✅ Docker build completed successfully"
         
     - name: Test Docker image - Basic functionality
       run: |
