feat: Add SFTP listing and download elements with example usage

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ Jinja2
 jq
 fastapi
 uvicorn[standard]
+paramiko
 asciinet @ git+https://github.com/cosminbasca/asciinet.git#subdirectory=pyasciinet
 py-dagviz @ git+https://github.com/ctongfei/py-dagviz.git
